# taoli-tools

./: .gitignore  ADAPTIVE_BIDIRECTIONAL_GRID_STRATEGY.md  Cargo.toml  ENHANCED_RISK_CONTROL_IMPLEMENTATION.md  FEATURE_INTEGRATION_SUMMARY.md  GRID_IMPROVEMENTS_IMPLEMENTED.md  LICENSE  MARKET_STATE_DETECTION_FINAL_SUMMARY.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  README_JSON_CLEANUP.md  WARNING_FIXES_SUMMARY.md  cleanup_json_files.sh  config.toml  dynamic_grid_params.json  grid_state.json  orders_state_backup_1748337897.json  performance_snapshot_1748332708.json
configs/: default.toml
docs/: d.md  q.md
docs/improvement/: ADAPTIVE_ORDER_REBALANCE_ENHANCED.md  ADAPTIVE_ORDER_REBALANCE_IMPLEMENTATION.md  ASSET_CALCULATION_FIX.md  BATCH_OPTIMIZER_REFACTOR.md  BATCH_ORDER_PROCESSING_FIX.md  BATCH_TASK_OPTIMIZER_IMPLEMENTATION.md  COMPILATION_ERRORS_FIXED.md  COMPILATION_FIXES_SUMMARY.md  COMPILATION_FIX_SUMMARY.md  CONFIG_FIX_SUMMARY.md  CONNECTION_MANAGEMENT_INTEGRATION_SUMMARY.md  COST_BASED_BUY_ORDER_OPTIMIZATION.md  COST_BASED_GRID_OPTIMIZATION.md  ERROR_MODULE_REFACTOR.md  EXPONENTIAL_BACKOFF_IMPROVEMENTS.md  FINAL_IMPROVEMENTS_SUMMARY.md  FINAL_MODULES_INTEGRATION_SUMMARY.md  FINAL_SMART_ORDER_SOLUTION.md  GRID_BALANCE_CHECK_FIX.md  GRID_IMPROVEMENTS.md  GRID_STRATEGY_IMPROVEMENTS_SUMMARY.md  IMPROVEMENT_SUGGESTIONS.md  JSON_CLEANUP_SCRIPTS_SUMMARY.md  MARGIN_CHECK_IMPROVEMENTS.md  MARKET_STATE_DETECTION_COMPLETE.md  MARKET_STATE_DETECTION_IMPLEMENTATION.md  ORDER_CANCELLATION_FIX_SUMMARY.md  ORDER_LIMIT_CONTROL_FIX.md  (+28 more)
src/: lib.rs  main.rs
(+6 files in other folders)
