[package]
name = "taoli-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
config = "0.13"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
tokio = { version = "1.36", features = ["full"] }
ethers = { version = "2.0", features = ["ws"] }
hyperliquid_rust_sdk = "0.6.0"
log = "0.4"
env_logger = "0.10"
